feat:get all lookups
